--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,30 @@
 body {
   background-color: F8F8F8;
-  font-family: "Lucida Console", Monaco, monospace;
+  text-align: center;
+  font-family: "Source Code Pro", monospace;
+  margin-top: 80px;
+}
+h1 {
+  text-transform: uppercase;
+  font-weight: lighter;
+  font-size: 40px;
 }
 p {
   color: 606060;
-  margin-top: 40px;
-  text-align: center;
+  text-transform: lowercase;
+}
+a {
+  text-decoration: none;
+}
+a:link {
+  color: black;
+}
+a:visited {
+  color: black;
+}
+a:hover {
+  color: hotpink;
+}
+a:active {
+  color: lightgrey;
 }
