--- a/disco/styles.css
+++ b/disco/styles.css
@@ -2,6 +2,7 @@ body {
   background-color: F8F8F8;
   text-align: center;
   font-family: "Source Code Pro", monospace;
+  font-size: 150%;
   margin-top: 80px;
 }
 p {
