--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: F8F8F8;
+  background-color: FFFFFF;
   text-align: center;
   font-family: "Source Code Pro", monospace;
   margin-top: 80px;
@@ -7,7 +7,7 @@ body {
 h1 {
   text-transform: uppercase;
   font-weight: lighter;
-  font-size: 40px;
+  font-size: 60px;
 }
 p {
   color: 606060;
