--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ h1 {
   font-size: 60px;
 }
 p {
-  color: 606060;
+  color: dimgrey;
 }
 a {
   text-decoration: none;
@@ -22,7 +22,7 @@ a:visited {
   color: darkcyan;
 }
 a:hover {
-  color: darkcyan;
+  color: cadetblue;
 }
 a:active {
   color: lightgrey;
