--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
   background-color: FFFFFF;
   font-family: "Source Code Pro", monospace;
   margin-top: 80px;
+  color: #404040;
 }
 .container {
   max-width: 512px;
@@ -17,9 +18,7 @@ h1 {
   text-transform: uppercase;
   font-weight: lighter;
   font-size: 40px;
-}
-p {
-  color: dimgrey;
+  color: black;
 }
 a {
   text-decoration: none;
